# sfml-mobile-app

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.json
.github/workflows/: ci-android.yaml  ci-ios.yaml  ci.yaml
src/: main.cpp
